--- a/src/scss/components/form/checkbox_switch.scss
+++ b/src/scss/components/form/checkbox_switch.scss
@@ -2,15 +2,14 @@
   display: inline;
 
   .switch-label {
-    width: 35px;
-    height: 15px;
-    background: rgba(144, 151, 153, 0.64);
-    box-shadow: inset 0 0 0 30px #dce3e6;
-    border-radius: 30px;
+    width: 39px;
+    height: 20px;
+    background: rgba(0, 0, 0, 0.38);
+    border-radius: 4px;
     display: block;
     cursor: pointer;
     position: relative;
-    top: -17px;
+    top: -10px;
     transition: all 0.3s cubic-bezier(0.55, 0, 0, 1) 0s;
   }
 
@@ -20,36 +19,33 @@
 
   .switch-circle {
     position: relative;
-    top: -35px;
+    top: -32px;
     left: -3px;
-    height: 20px;
-    width: 20px;
-    border-radius: 50%;
+    height: 24px;
+    width: 24px;
+    border-radius: 8px;
     display: block;
-    background: #909799;
+    background: #fff;
     border: none;
     cursor: pointer;
-    box-shadow: inset 0 0 0 40px #dce3e6, 0 0 5px 0 #696e6f;
+    box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.16);
     transition: box-shadow 0.4s cubic-bezier(0.55, 0, 0, 1) 0s, left 240ms cubic-bezier(0.55, 0, 0, 1) 0s;
   }
 
   &.checked {
     .switch-circle {
       left: 19px;
-      box-shadow: inset 0 0 0 0 #dce3e6, 0 0 5px 0 #696e6f;
-      background: #2b41b2;
     }
 
     .switch-label {
-      box-shadow: inset 0 0 0 0 #dce3e6;
-      background: rgba(43, 65, 178, 0.64);
+      background: #44a762;
     }
   }
 }
 
 .switch-button-container {
   margin-right: auto;
-  height: 20px;
+  height: 40px;
   padding-left: 5px;
 
   &.is-disabled {
@@ -61,18 +57,18 @@
   }
 
   .checkbox {
-    height: 20px;
+    height: 40px;
   }
 
   .switch-button-text {
     font-size: 12px;
-    color: #909799;
+    color: rgba(0, 0, 0, 0.48);
     margin-left: 10px;
     text-transform: uppercase;
     font-weight: 700;
 
     &.is-active {
-      color: #5269de;
+      color: rgba(0, 0, 0, 0.8);
     }
   }
 }
