Updated content, header, and navigation background color

--- a/src/scss/layout/admin/navigation.scss
+++ b/src/scss/layout/admin/navigation.scss
@@ -22,7 +22,7 @@
   font-weight: 400;
   line-height: 16px;
   color: #616161;
-  background-color: #fff;
+  background-color: #fcfcfc;
   box-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0.24);
   height: 48px;
   width: 100%;
