--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -60,7 +60,7 @@ body {
   position: fixed;
   width: 100%;
   height: 100%;
-  background-color: #fff;
+  background-color: #fcfcfc;
   color: #0c0d0d;
   font-family: Roboto, sans-serif;
   overflow: hidden;
@@ -73,7 +73,5 @@ body[class*='resetting_reset'] {
 }
 
 body.logged-in[class*='admin_'] {
-  background-color: #eaf0f2;
-
   @import './layout/admin/index';
 }
