--- a/src/scss/layout/admin/header.scss
+++ b/src/scss/layout/admin/header.scss
@@ -7,7 +7,7 @@ header {
   min-height: 60px;
   transition: margin 0.3s, width 0.3s;
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 1px 6px rgba(0, 0, 0, 0.12);
-  background-color: #fff;
+  background-color: #fcfcfc;
   z-index: 10;
 }
 
@@ -98,7 +98,7 @@ header {
   width: 40px;
   height: 40px;
   border-radius: 8px;
-  background-color: #fff;
+  background-color: #fcfcfc;
 }
 
 .header-badge {
