Updated dropdown-options border radius and shadow

--- a/src/scss/components/form/dropdown.scss
+++ b/src/scss/components/form/dropdown.scss
@@ -79,8 +79,8 @@
 }
 
 .dropdown-options {
-  border-radius: 2px;
-  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 1px 6px rgba(0, 0, 0, 0.12);
+  border-radius: 8px;
+  box-shadow: 0 0 24px 0 rgba(0, 0, 0, 0.16);
   left: -20px;
   overflow: hidden;
   padding: 0;
