Updated some layout components and bump version 2.0.15
Include: settings, navigation, tabs, tooltip, entity-activity, entity-details, and form elements

--- a/src/scss/components/entity_activity/layout.scss
+++ b/src/scss/components/entity_activity/layout.scss
@@ -1,6 +1,6 @@
 .entity-activity {
   height: 100%;
-  background-color: #eaf0f2;
+  background-color: #fcfcfc;
   color: #0c0d0d;
   font-size: 13px;
   line-height: 24px;
