--- a/src/scss/components/tooltip.scss
+++ b/src/scss/components/tooltip.scss
@@ -6,10 +6,11 @@
   text-transform: none;
   line-height: 14px;
   color: #fff;
-  background-color: #0c0d0d;
+  background-color: #5c5c5c;
+  opacity: 0.95;
   width: auto;
   padding: 8px;
-  border-radius: 2px;
+  border-radius: 8px;
   text-align: center;
   white-space: nowrap;
 }
