--- a/src/scss/components/entity_profile_frame/layout.scss
+++ b/src/scss/components/entity_profile_frame/layout.scss
@@ -167,7 +167,7 @@
   margin-bottom: -1px;
 
   &.active {
-    box-shadow: inset 0 -4px 0 #db9e22;
+    box-shadow: inset 0 -3px 0 #4a4060;
     color: #0c0d0d;
   }
 
