--- a/src/scss/components/form/form_upload.scss
+++ b/src/scss/components/form/form_upload.scss
@@ -120,10 +120,188 @@
     display: flex;
   }
 
-  &.is-photo-loaded {
+  &.is-file-loaded {
     .form-upload-picture-loaded,
     .form-upload-remove-picture {
       display: block;
     }
+  }
+}
+
+.form-upload-button {
+  margin-bottom: 20px;
+  height: 56px;
+  box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.16);
+  background-color: #fff;
+  border-radius: 8px;
+  font-size: 14px;
+  font-weight: 400;
+}
+
+.form-upload-button-empty {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  font-weight: 600;
+  cursor: pointer;
+}
+
+.form-upload-button-loading {
+  position: relative;
+  display: none;
+  justify-content: flex-start;
+  padding: 25px 10px 10px;
+
+  .progress {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    height: 4px;
+    display: block;
+    width: 90%;
+    background-color: rgba(0, 0, 0, 0.12);
+    border-radius: 2px;
+    background-clip: padding-box;
+    margin: 0.5rem 0 1rem 0;
+    overflow: hidden;
+
+    .indeterminate {
+      background-color: #44a762;
+
+      &:before {
+        content: '';
+        position: absolute;
+        background-color: inherit;
+        top: 0;
+        left: 0;
+        bottom: 0;
+        will-change: left, right;
+        -webkit-animation: indeterminate 2.1s cubic-bezier(0.65, 0.815, 0.735, 0.395) infinite;
+        animation: indeterminate 2.1s cubic-bezier(0.65, 0.815, 0.735, 0.395) infinite;
+      }
+
+      &:after {
+        content: '';
+        position: absolute;
+        background-color: inherit;
+        top: 0;
+        left: 0;
+        bottom: 0;
+        will-change: left, right;
+        -webkit-animation: indeterminate-short 2.1s cubic-bezier(0.165, 0.84, 0.44, 1) infinite;
+        animation: indeterminate-short 2.1s cubic-bezier(0.165, 0.84, 0.44, 1) infinite;
+        -webkit-animation-delay: 1.15s;
+        animation-delay: 1.15s;
+      }
+    }
+  }
+}
+
+.form-upload-button-loaded {
+  position: relative;
+  display: none;
+  justify-content: flex-start;
+  flex-direction: column;
+  padding: 7px 10px;
+
+  .form-upload-button-close {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    cursor: pointer;
+  }
+}
+
+.form-upload-button {
+  &.is-uploading {
+    .form-upload-button-empty {
+      display: none;
+    }
+
+    .form-upload-button-loading {
+      display: flex;
+    }
+  }
+
+  &.is-file-loaded {
+    background-color: #44a762;
+    color: #fff;
+
+    .form-upload-button-empty {
+      display: none;
+    }
+
+    .form-upload-button-loaded {
+      display: flex;
+    }
+  }
+}
+
+@-webkit-keyframes indeterminate {
+  0% {
+    left: -35%;
+    right: 100%;
+  }
+
+  60% {
+    left: 100%;
+    right: -90%;
+  }
+
+  100% {
+    left: 100%;
+    right: -90%;
+  }
+}
+
+@keyframes indeterminate {
+  0% {
+    left: -35%;
+    right: 100%;
+  }
+
+  60% {
+    left: 100%;
+    right: -90%;
+  }
+
+  100% {
+    left: 100%;
+    right: -90%;
+  }
+}
+
+@-webkit-keyframes indeterminate-short {
+  0% {
+    left: -200%;
+    right: 100%;
+  }
+
+  60% {
+    left: 107%;
+    right: -8%;
+  }
+
+  100% {
+    left: 107%;
+    right: -8%;
+  }
+}
+
+@keyframes indeterminate-short {
+  0% {
+    left: -200%;
+    right: 100%;
+  }
+
+  60% {
+    left: 107%;
+    right: -8%;
+  }
+
+  100% {
+    left: 107%;
+    right: -8%;
   }
 }
