--- a/src/scss/components/tab.scss
+++ b/src/scss/components/tab.scss
@@ -9,13 +9,13 @@
   display: inline-block;
   padding: 10px 20px;
   position: relative;
-  font-size: 12px;
-  font-weight: 500;
+  font-size: 13px;
+  font-weight: 600;
   line-height: 20px;
 
   &:after {
-    background-color: #2b41b2;
-    bottom: -1px;
+    background-color: #4a4060;
+    bottom: 0;
     content: '';
     display: block;
     height: 3px;
