--- a/src/scss/components/tooltip.scss
+++ b/src/scss/components/tooltip.scss
@@ -6,11 +6,10 @@
   text-transform: none;
   line-height: 14px;
   color: #fff;
-  background-color: #5c5c5c;
-  opacity: 0.95;
+  background-color: #0c0d0d;
   width: auto;
   padding: 8px;
-  border-radius: 8px;
+  border-radius: 4px;
   text-align: center;
   white-space: nowrap;
 }
