Centered company user list item thumbnail

--- a/src/scss/layout/admin/settings/user.scss
+++ b/src/scss/layout/admin/settings/user.scss
@@ -25,6 +25,8 @@ img#settings-content-account-owner-button {
 }
 
 .settings-content-company-user-list-item-thumbnail {
+  align-items: center;
+
   .settings-content-main-content {
     color: #57585a;
     font-weight: 700;
