Allow removing overflow for settings content table rows

--- a/src/scss/layout/admin/settings/layout.scss
+++ b/src/scss/layout/admin/settings/layout.scss
@@ -122,6 +122,10 @@
   border-bottom: none;
 }
 
+.ignore-rows-overflow .settings-content-table-rows {
+  overflow: hidden;
+}
+
 .settings-content-table-item {
   padding: 5px;
   height: 56px;
