--- a/src/scss/layout/admin/navigation.scss
+++ b/src/scss/layout/admin/navigation.scss
@@ -63,7 +63,7 @@
             font-size: 16px;
             font-family: 'Material Icons Extended';
             height: auto;
-            content: 'keyboard_arrow_right';
+            content: 'arrow_right';
             font-weight: 300;
             text-shadow: none;
             position: relative;
@@ -148,6 +148,10 @@
         background: transparent;
         border-bottom: 3px solid #4a4060;
         color: #000;
+
+        > a {
+          font-weight: 600;
+        }
       }
 
       > {
@@ -188,7 +192,7 @@
             }
 
             &.is-active > a {
-              font-weight: 500;
+              font-weight: 600;
             }
           }
         }
