--- a/src/scss/components/form/checkbox_switch.scss
+++ b/src/scss/components/form/checkbox_switch.scss
@@ -45,7 +45,7 @@
 
 .switch-button-container {
   margin-right: auto;
-  height: 40px;
+  height: 20px;
   padding-left: 5px;
 
   &.is-disabled {
@@ -57,14 +57,14 @@
   }
 
   .checkbox {
-    height: 40px;
+    position: relative;
+    top: -10px;
   }
 
   .switch-button-text {
     font-size: 12px;
     color: rgba(0, 0, 0, 0.48);
     margin-left: 10px;
-    text-transform: uppercase;
     font-weight: 700;
 
     &.is-active {
