--- a/src/scss/components/modal/layout.scss
+++ b/src/scss/components/modal/layout.scss
@@ -68,7 +68,7 @@
   background: #fff;
   border-radius: 16px 16px 0 0;
   border-bottom: none;
-  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 1px 6px rgba(0, 0, 0, 0.12);
+  box-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0.08);
   word-wrap: break-word;
   z-index: 1;
 
