--- a/src/scss/components/tab.scss
+++ b/src/scss/components/tab.scss
@@ -79,7 +79,7 @@
   top: 0;
   left: 0;
   background-color: #fff;
-  box-shadow: 0 3px 5px 0.3px rgba(0, 0, 0, 0.24);
+  box-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0.08);
   height: 48px;
   overflow: visible;
   visibility: visible;
