--- a/src/scss/layout/admin/header.scss
+++ b/src/scss/layout/admin/header.scss
@@ -6,7 +6,7 @@ header {
   padding-left: 60px;
   min-height: 60px;
   transition: margin 0.3s, width 0.3s;
-  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 1px 6px rgba(0, 0, 0, 0.12);
+  box-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0.08);
   background-color: #fcfcfc;
   z-index: 10;
 }
