--- a/src/scss/layout/auth/index.scss
+++ b/src/scss/layout/auth/index.scss
@@ -24,7 +24,7 @@
 .alert-container {
   width: 100%;
   text-align: center;
-  margin: -20px 0 20px;
+  margin: 20px 0;
 
   .alert {
     font-weight: 400;
@@ -36,7 +36,8 @@
     display: inline-block;
     height: auto;
     background-color: #fff;
-    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 1px 6px rgba(0, 0, 0, 0.12);
+    box-shadow: 10px 10px 35px 0 rgba(0, 0, 0, 0.08);
+    border-radius: 8px;
     font-size: 13px;
     font-weight: 500;
   }
@@ -75,6 +76,7 @@
 
   .authentication-body {
     max-width: 400px;
+    height: 100vh;
     width: 80%;
   }
 
@@ -93,6 +95,7 @@
     justify-content: center;
     font-size: 13px;
     font-weight: 600;
+    margin-bottom: 40px;
   }
 }
 
