Increased button padding

--- a/src/scss/components/buttons.scss
+++ b/src/scss/components/buttons.scss
@@ -61,7 +61,7 @@
   font-size: 12px;
   font-weight: 600;
   line-height: 18px;
-  padding: 6px 16px;
+  padding: 9px 16px 8px;
   text-align: center;
   transition: background-color 0.2s, opacity 0.2s;
   outline: 0;
