Updated dashboard and scrollable-tabs background color

--- a/src/scss/components/tab.scss
+++ b/src/scss/components/tab.scss
@@ -78,7 +78,7 @@
   position: absolute;
   top: 0;
   left: 0;
-  background-color: #fff;
+  background-color: #fcfcfc;
   box-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0.08);
   height: 48px;
   overflow: visible;
