--- a/src/scss/layout/admin/dashboard/layout.scss
+++ b/src/scss/layout/admin/dashboard/layout.scss
@@ -1,5 +1,5 @@
 .dashboard {
-  background-color: #f2f2f2;
+  background-color: #fcfcfc;
   height: 100%;
   max-height: 100%;
   overflow-y: scroll;
@@ -19,7 +19,7 @@
     width: calc(100% - 60px);
     z-index: 3;
     transition: margin-left 0.3s, width 0.3s;
-    background-color: #f2f2f2;
+    background-color: #fcfcfc;
     box-shadow: 0 3px 5px 0.3px rgba(0, 0, 0, 0.24);
     padding-top: 12px;
   }
@@ -99,7 +99,7 @@
 
     .empty-state-icon {
       border-radius: 50%;
-      background-color: #f2f2f2;
+      background-color: #fcfcfc;
       font-size: 46px;
       height: 100px;
       line-height: 100px;
